[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/actors/Stats.gd" type="Script" id=1]
[ext_resource path="res://src/other/hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/actors/worm.gd" type="Script" id=3]
[ext_resource path="res://assets/actors/worm.png" type="Texture" id=4]
[ext_resource path="res://src/other/PlayerDetection.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/other/SoftCollision.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/other/WanderManager.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.68633, 1.71317 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.7472
height = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 47.7282

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 1 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 3.50126

[node name="worm" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 3 )
speed = 50
max_speed = 30

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.0195465, -5.05454 )
texture = ExtResource( 4 )
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.467576, -1.75434 )
shape = SubResource( 1 )

[node name="hurtbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_mask = 0

[node name="hutbox_shape" parent="hurtbox" index="0"]
position = Vector2( 0, -1.56459 )
shape = SubResource( 2 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 1 )

[node name="PlayerDetection" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
modulate = Color( 0.827451, 0.168627, 0.941176, 0.435294 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="SoftCollision" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
modulate = Color( 0.0784314, 0.0588235, 0.423529, 1 )
position = Vector2( 0, -1.25 )
shape = SubResource( 6 )

[node name="WanderManager" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_no_health"]

[editable path="hurtbox"]
[editable path="PlayerDetection"]
[editable path="SoftCollision"]
